--- a/Tyuiu.MeshcheryakovPV.Sprint1.Task0.V0/Tyuiu.MeshcheryakovPV.Sprint1.Task0.V26.csproj
+++ b/Tyuiu.MeshcheryakovPV.Sprint1.Task0.V0/Tyuiu.MeshcheryakovPV.Sprint1.Task0.V26.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F314D4B8-96FC-4198-A0EE-FFD761D5233D}</ProjectGuid>
+    <ProjectGuid>{CCD127D0-A52E-4B3F-A5F5-906B813B2C42}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</RootNamespace>
-    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</AssemblyName>
+    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.Task0.V0</RootNamespace>
+    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.Task0.V0</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -41,6 +41,9 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\..\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Program.cs" />
@@ -50,9 +53,9 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib.csproj">
-      <Project>{7d2ea301-fa84-48cf-857d-d197eac05937}</Project>
-      <Name>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib</Name>
+    <ProjectReference Include="..\Tyuiu.MeshcheryakovPV.Sprint1.V26.Lib\Tyuiu.MeshcheryakovPV.Sprint1.Task0.V26.Lib.csproj">
+      <Project>{60e95573-0724-4305-8e1b-6362eb75a904}</Project>
+      <Name>Tyuiu.MeshcheryakovPV.Sprint1.Task0.V26.Lib</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
