--- a/Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib/Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib.csproj
+++ b/Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib/Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib.csproj
@@ -4,17 +4,16 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F314D4B8-96FC-4198-A0EE-FFD761D5233D}</ProjectGuid>
-    <OutputType>Exe</OutputType>
-    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</RootNamespace>
-    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</AssemblyName>
+    <ProjectGuid>{7D2EA301-FA84-48CF-857D-D197EAC05937}</ProjectGuid>
+    <OutputType>Library</OutputType>
+    <AppDesignerFolder>Properties</AppDesignerFolder>
+    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib</RootNamespace>
+    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
@@ -24,7 +23,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
     <OutputPath>bin\Release\</OutputPath>
@@ -41,19 +39,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="tyuiu.cources.programming.interfaces, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\tyuiu.cources.programming.interfaces.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
+    <Compile Include="DataService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib.csproj">
-      <Project>{7d2ea301-fa84-48cf-857d-d197eac05937}</Project>
-      <Name>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
