--- a/Tyuiu.MeshcheryakovPV.Sprint1.V26/Tyuiu.MeshcheryakovPV.Sprint1.V26.csproj
+++ b/Tyuiu.MeshcheryakovPV.Sprint1.V26/Tyuiu.MeshcheryakovPV.Sprint1.V26.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F314D4B8-96FC-4198-A0EE-FFD761D5233D}</ProjectGuid>
+    <ProjectGuid>{59AF17B2-46B3-4BD1-BB2E-D08342A26F4F}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</RootNamespace>
-    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26</AssemblyName>
+    <RootNamespace>Tyuiu.MeshcheryakovPV.Sprint1.V26</RootNamespace>
+    <AssemblyName>Tyuiu.MeshcheryakovPV.Sprint1.V26</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -48,12 +48,6 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib\Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib.csproj">
-      <Project>{7d2ea301-fa84-48cf-857d-d197eac05937}</Project>
-      <Name>Tyuiu.MeshcheryakovPV.Sprint1.Task1.V26.Lib</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
